--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "eslint": "eslint --fix '**/*.js'",
     "new-config": "node scripts/new-config.js",
     "npm-check-updates": "npm-check-updates --target minor -u",
-    "preflight": "npm run touch && npm update && npm run npm-check-updates && npm i && npm audit fix && npm run eslint && npm run prettier && npm run coverage && npm run docs && npm outdated && echo 'preflight passed'",
+    "preflight": "npm update && npm run npm-check-updates && npm i && npm audit fix && npm run eslint && npm run prettier && npm run coverage && npm run docs && npm outdated && echo 'preflight passed'",
     "prettier": "prettier \"**/**.{ts,json,css,scss,html}\" --write",
     "touch": "find . -exec touch {} \\;",
     "test": "./node_modules/mocha/bin/mocha.js --recursive -t 100000 test/unit",
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@bananocoin/bananojs": "^2.10.7",
-    "https-rate-limit": "^1.0.12",
+    "https-rate-limit": "^1.0.13",
     "levelup": "^5.1.1",
     "rocksdb": "^5.2.1"
   },
